Small fixes
Remove padding-bottom from the two sections as it looks weird, there is
this huge gap between content with nothing in it.

Make the kubernetes logo smaller, otherwise its just giant

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,3 +7,7 @@
     background-color: #d23306;
     border-color: #d23306;
 }
+
+.hero#home{
+    padding-bottom: 0;  /* No need to have padding between home and sections */
+}
